--- a/BookingOTAFramework/test-output/old/Default suite/classes.html
+++ b/BookingOTAFramework/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>bookingOtaVR.OTA_ExpediaClose</td>
+<td>Booking_OTA.Booking_cw</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TestData</td>
+<td>BookingAutomation</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
