--- a/BookingOTAFramework/test-output/old/Default suite/methods-alphabetical.html
+++ b/BookingOTAFramework/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9dbc8c">  <td>23/01/02 14:13:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Booking_cw.BookingAutomation()[pri:0, instance:Booking_OTA.Booking_cw@71def8f8]">BookingAutomation</td> 
-  <td>main@150138649</td>   <td></td> </tr>
+<tr bgcolor="ca7889">  <td>23/03/28 12:28:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleBot.TestData()[pri:0, instance:bookingOtaVR.GoogleBot@383bfa16]">TestData</td> 
+  <td>main@1191654595</td>   <td></td> </tr>
 </table>
