--- a/BookingOTAFramework/test-output/old/Default suite/classes.html
+++ b/BookingOTAFramework/test-output/old/Default suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>Booking_OTA.Goibibo_Automated_Search</td>
+<td>Booking_OTA.MMT_AutomatedSearch</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
