--- a/BookingOTAFramework/test-output/old/Default suite/methods-alphabetical.html
+++ b/BookingOTAFramework/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ca7889">  <td>23/06/27 15:02:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Goibibo_Automated_Search.BookingAutomation()[pri:0, instance:Booking_OTA.Goibibo_Automated_Search@bd4dc25]">BookingAutomation</td> 
-  <td>main@1855026648</td>   <td></td> </tr>
+<tr bgcolor="ca7889">  <td>23/06/27 22:52:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MMT_AutomatedSearch.BookingAutomation()[pri:0, instance:Booking_OTA.MMT_AutomatedSearch@53fdffa1]">BookingAutomation</td> 
+  <td>main@1987375157</td>   <td></td> </tr>
 </table>
